--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
  <header>
     <nav>
-    <a href="./index.html">WEBSTUDIO</a>
+    <a href="./index.html">WebStudio</a>
     <ul>
         <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
@@ -17,8 +17,12 @@
     </nav>
     <address>
     <ul>
-        <li><a href="">info@devstudio.com</a></li>
-        <li><a href="">+11 (000) 111-11-11</a></li>
+        <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
     </ul>
     </address>
  </header>   
@@ -31,7 +35,7 @@
     <section>
         <ul>
             <li>
-                <h3>Strategy</h3>
+                <h2>Strategy</h2>
                 <p>Our goal is to identify the business
                 problem to walk away with the perfect and creative solution.</p>
             </li>
@@ -50,7 +54,7 @@
         </ul>
     </section>
     <section>
-        <h2>Our Tea</h2>
+        <h2>Our Team</h2>
         <ul>
             <li>
                 <img
@@ -96,7 +100,7 @@
     </section>
 </main>
 <footer>
-    <a href="/index.html">WEBSTUDIO</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
